[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/levels/triggers/MapTrigger.gd" type="Script" id=1]

[node name="MapTrigger" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="Sprite" type="Sprite" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -53.8174
margin_top = -109.317
margin_right = 54.1826
margin_bottom = -79.3165
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
